Support fetching multiple goal progress
